--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,12 +1,3 @@
-# General
-
+include theme.conf
 mouse_hide_wait -1
-window_padding_width 4.0
-
-# Fonts
-
-font_size            9.0
-font_family          Fira Code Light
-bold_font            auto
-italic_font          auto
-bold_italic_font     auto
+window_padding_width 0 1
