git: Remove unused git aliases

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -11,11 +11,9 @@
   defaultBranch = main
 
 [alias]
-  hist = log --all --graph --oneline
-  amend = commit --all --amend
   save = ! git add --all && git commit --message 'SAVEPOINT'
   undo = reset HEAD~1 --mixed
-  bye-list = \
+  bye-ls = \
     ! git branch --remotes \
     | grep origin \
     | grep --invert-match HEAD \
@@ -23,11 +21,11 @@
     | grep --invert-match master \
     | sed 's/origin\\///g'
   bye = \
-    ! git bye-list \
+    ! git bye-ls \
     | xargs git push --dry-run --delete origin \
     && echo 'Use `git byebye` to delete them.'
   byebye = \
-    ! git bye-list \
+    ! git bye-ls \
     | xargs git push --delete origin
 
 [filter "lfs"]
